--- a/config/solid_queue.yml
+++ b/config/solid_queue.yml
@@ -1,11 +1,11 @@
 default: &default
   dispatchers:
     - polling_interval: 1
-      batch_size: 300
+      batch_size: 500
   workers:
     - queues: "*"
-      threads: 12
-      processes: 1
+      threads: 3
+      processes: <%= ENV.fetch("JOB_CONCURRENCY", 1) %>
       polling_interval: 0.1
 
 development:
