--- a/.dockerignore
+++ b/.dockerignore
@@ -7,9 +7,8 @@
 # Ignore bundler config.
 /.bundle
 
-# Ignore all environment files (except templates).
+# Ignore all environment files.
 /.env*
-!/.env*.erb
 
 # Ignore all default key files.
 /config/master.key
@@ -30,12 +29,6 @@
 !/storage/.keep
 /tmp/storage/*
 !/tmp/storage/.keep
-
-# Ignore assets.
-/node_modules/
-/app/assets/builds/*
-!/app/assets/builds/.keep
-/public/assets
 
 # Ignore CI service files.
 /.github
